fix form alignment

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -124,9 +124,9 @@ video, #remote-media {
 }
 
 .register input {
-  display: block;
+  display: inline-block;
   font-size: 16px;
-  margin: 12px 0;
+  margin: 12px 0 0 0;
   border-radius: 4px;
   padding: 12px;
   border: 0;
@@ -162,6 +162,7 @@ video, #remote-media {
   font-weight: 600;
   text-align: center;
   display: inline-block;
+  margin: 12px 0 0 0;
 }
 
 .flex-container {
